feat: add login with Medium button

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,7 +1,10 @@
-<html>
-
+<!DOCTYPE html>
+<html lang="en">
+	<head>
+		<title>Backdraft for Medium</title>
+	</head>
 	<body>
 		<h1>Backdraft for Medium</h1>
+		<a href="/auth">Login with Medium</a>
 	</body>
-
 </html>
