--- a/views/editor.ejs
+++ b/views/editor.ejs
@@ -6,6 +6,9 @@
 	<body>
 		<h1>Backdraft for Medium</h1>
 		<form method="POST">
+			<label for="post_title">Title</label>
+			<input type="date" name="post_title" />
+			<br />
 			<label for="post_date">Date</label>
 			<input type="date" name="post_date" />
 			<br />
